# whiskey_api

./: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
WhiskeyProof/: settings.py
